[package]
name = "led-cli"
version = "0.1.0"
edition = "2021"
authors = ["Leo Seeger"]
license = "MIT OR Apache-2.0"
description = "A tool for controlling LED lights over mqqt"
homepage = "https://github.com/leoseg/LED-CLI-Controller"
repository = "https://github.com/leoseg/LED-CLI-Controller"
keywords = ["cli", "search", "mcu"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.5.21", features = ["derive"] }
rumqttc = "0.24.0"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
tokio-rustls = "0.25.0"
rustls-native-certs = "0.7.3"

[profile.release]
incremental = true
debug = true
lto = "fat"


